# shrt

./: CMakeLists.txt  COPYING.txt  README.adoc  main.html  make-static.sh
.github/workflows/: build.yaml
src/: app.cpp  app.hpp  app_test.cpp  config.cpp  config.hpp  data.cpp  data.hpp  data_mock.hpp  data_test.cpp  main.cpp  statics.hpp
statics/: styles.css
templates/: delete-link.html  footer.html  head.html  links.html  nav.html  new-link.html
